minor changes the three first chapters

--- a/pub/html/._book005.html
+++ b/pub/html/._book005.html
@@ -156,7 +156,7 @@ MathJax.Hub.Config({
      <!-- navigation toc: --> <li><a href="._book004.html#___sec28" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Solving a set of ODE equations</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec29" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Stiff sets of ODE  and implicit methods</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec30" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 3.1: Truncation Error in Eulers Method</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#___sec31" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;References</a></li>
+     <!-- navigation toc: --> <li><a href="#___sec31" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;References</a></li>
 
         </ul>
       </li>
@@ -169,54 +169,27 @@ MathJax.Hub.Config({
 
 <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p> <!-- add vertical space -->
 
-<a name="part0000"></a>
-<!-- ------------------- main content ---------------------- -->
+<a name="part0005"></a>
+<!-- !split -->
 
-<!-- Note on the Springer T4 style: here we use the modifications -->
-<!-- introduced in t4do.sty and svmonodo.sty (both are bundled with DocOnce). -->
-
-<p>
-
-
-<div class="jumbotron">
-<center><h1>Modeling and Computational Engineering </h1></center>  <!-- document title -->
+<h1 id="___sec31" class="anchor">References </h1>
 
 <p>
-<!-- author(s): Aksel Hiorth, the National IOR Centre &amp; Institute for Energy Resources, -->
+<!-- begin bibliography -->
 
-<center>
-<b>Aksel Hiorth, the National IOR Centre &amp; Institute for Energy Resources,</b> 
-</center>
+<ol>
+ <li> <div id="Python"></div> Python Programming Language. 
+    <a href="http://python.org" target="_self"><tt>http://python.org</tt></a>.</li>
+</ol>
 
-<p>
-<!-- institution(s) -->
-
-<br>
-University of Stavanger
-<p>
-<center><h4>Jan 29, 2019</h4></center> <!-- date -->
-<br>
-<p>
-<b>Summary.</b> (Work in Progress) The purpose of this document is to explain how computers solve mathematical models.
-Many of the most common numerical methods will be presented, we show how to implement them in Python, and discuss the limitations.
-The mathemathical formalism is kept to a minimum. All the material is available at
-<a href="https://github.com/ahiorth/CompEngineering" target="_self">github</a>. For each of the chapter there is a Jupyter <a href="https://github.com/ahiorth/CompEngineering/tree/master/pub/chapters" target="_self">notebook</a>. This makes it possible to run all the codes in this document.
-We strongly recommend to install Python from <a href="https://www.anaconda.com/" target="_self">Anaconda</a>. All documents have been prepared using <a href="https://github.com/ahiorth/CompEngineering/tree/master/pub/chapters" target="_self">doconce</a>.
-
-<p>
-
-
-<p><a href="._book001.html" class="btn btn-primary btn-lg">Read &raquo;</a></p>
-
-
-</div> <!-- end jumbotron -->
+<!-- end bibliography -->
 
 <p>
 <!-- navigation buttons at the bottom of the page -->
 <ul class="pager">
 
-  <li class="next">
-    <a href="._book001.html">Next &rarr;</a>
+  <li class="previous">
+    <a href="._book004.html">&larr; Prev</a>
   </li>
 </ul>
 <!-- ------------------- end of main content --------------- -->
