--- a/pub/html/book.html
+++ b/pub/html/book.html
@@ -194,11 +194,11 @@ MathJax.Hub.Config({
 <br>
 University of Stavanger
 <p>
-<center><h4>Jan 29, 2019</h4></center> <!-- date -->
+<center><h4>Feb 7, 2019</h4></center> <!-- date -->
 <br>
 <p>
 <b>Summary.</b> (Work in Progress) The purpose of this document is to explain how computers solve mathematical models.
-Many of the most common numerical methods will be presented, we show how to implement them in Python, and discuss the limitations.
+Many of the most common numerical methods is presented, we show how to implement them in Python, and discuss the limitations.
 The mathemathical formalism is kept to a minimum. All the material is available at
 <a href="https://github.com/ahiorth/CompEngineering" target="_self">github</a>. For each of the chapter there is a Jupyter <a href="https://github.com/ahiorth/CompEngineering/tree/master/pub/chapters" target="_self">notebook</a>. This makes it possible to run all the codes in this document.
 We strongly recommend to install Python from <a href="https://www.anaconda.com/" target="_self">Anaconda</a>. All documents have been prepared using <a href="https://github.com/ahiorth/CompEngineering/tree/master/pub/chapters" target="_self">doconce</a>.
