--- a/html/._book000.html
+++ b/html/._book000.html
@@ -58,7 +58,7 @@ code { color: inherit; background-color: transparent; }
               ('Big $\\mathcal{O}$ notation', 2, None, '___sec6'),
               ('Round off Errors', 2, None, '___sec7'),
               ('Higher Order Derivatives', 1, None, '___sec8'),
-              ('Solving linear systems', 0, 'ch:nlin', 'ch:nlin'),
+              ('Solving linear systems', 0, 'ch:lin', 'ch:lin'),
               ('Solving linear equations', 1, None, '___sec10'),
               ('Gauss-Jordan elimination', 2, None, '___sec11'),
               ('Pivoting', 2, None, '___sec12'),
@@ -87,7 +87,8 @@ code { color: inherit; background-color: transparent; }
               ('The Midpoint Rule', 2, None, '___sec23'),
               ('The Trapezoidal Rule', 2, None, '___sec24'),
               ('Numerical Errors on Integrals', 2, None, '___sec25'),
-              ('Practical Estimation of Errors on Integrals',
+              ('Practical Estimation of Errors on Integrals (Richardson '
+               'Extrapolation)',
                2,
                'sec:numint:parct',
                'sec:numint:parct'),
@@ -101,9 +102,10 @@ code { color: inherit; background-color: transparent; }
                '___sec31'),
               ('Which method to use in a specific case?', 2, None, '___sec32'),
               ('Exercise 3.1: Numerical Integration', 2, None, '___sec33'),
+              ('Solving nonlinear equations', 0, 'ch:nlin', 'ch:nlin'),
               ('Ordinary differential equations', 0, 'ch:ode', 'ch:ode'),
               ('Monte Carlo Methods', 0, 'ch:mc', 'ch:mc'),
-              ('References', 1, None, '___sec36')]}
+              ('References', 1, None, '___sec37')]}
 end of tocinfo -->
 
 <body>
@@ -157,7 +159,7 @@ $$
      <!-- navigation toc: --> <li><a href="._book002.html#___sec6" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Big \( \mathcal{O} \) notation</a></li>
      <!-- navigation toc: --> <li><a href="._book002.html#___sec7" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Round off Errors</a></li>
      <!-- navigation toc: --> <li><a href="._book002.html#___sec8" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Higher Order Derivatives</a></li>
-     <!-- navigation toc: --> <li><a href="._book003.html#ch:nlin" style="font-size: 80%;"><b>Solving linear systems</b></a></li>
+     <!-- navigation toc: --> <li><a href="._book003.html#ch:lin" style="font-size: 80%;"><b>Solving linear systems</b></a></li>
      <!-- navigation toc: --> <li><a href="._book003.html#___sec10" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Solving linear equations</a></li>
      <!-- navigation toc: --> <li><a href="._book003.html#___sec11" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gauss-Jordan elimination</a></li>
      <!-- navigation toc: --> <li><a href="._book003.html#___sec12" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Pivoting</a></li>
@@ -174,7 +176,7 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#___sec23" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Midpoint Rule</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec24" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The Trapezoidal Rule</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec25" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Numerical Errors on Integrals</a></li>
-     <!-- navigation toc: --> <li><a href="._book004.html#sec:numint:parct" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Practical Estimation of Errors on Integrals</a></li>
+     <!-- navigation toc: --> <li><a href="._book004.html#sec:numint:parct" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Practical Estimation of Errors on Integrals (Richardson Extrapolation)</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec27" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;Romberg Integration</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec28" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Gaussian Quadrature</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec29" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;The case N=3</a></li>
@@ -182,9 +184,10 @@ $$
      <!-- navigation toc: --> <li><a href="._book004.html#___sec31" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Common Weight functions for Classical Gaussian Quadratures</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec32" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Which method to use in a specific case?</a></li>
      <!-- navigation toc: --> <li><a href="._book004.html#___sec33" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Exercise 3.1: Numerical Integration</a></li>
-     <!-- navigation toc: --> <li><a href="._book005.html#ch:ode" style="font-size: 80%;"><b>Ordinary differential equations</b></a></li>
-     <!-- navigation toc: --> <li><a href="._book006.html#ch:mc" style="font-size: 80%;"><b>Monte Carlo Methods</b></a></li>
-     <!-- navigation toc: --> <li><a href="._book007.html#___sec36" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;References</a></li>
+     <!-- navigation toc: --> <li><a href="._book005.html#ch:nlin" style="font-size: 80%;"><b>Solving nonlinear equations</b></a></li>
+     <!-- navigation toc: --> <li><a href="._book006.html#ch:ode" style="font-size: 80%;"><b>Ordinary differential equations</b></a></li>
+     <!-- navigation toc: --> <li><a href="._book007.html#ch:mc" style="font-size: 80%;"><b>Monte Carlo Methods</b></a></li>
+     <!-- navigation toc: --> <li><a href="._book008.html#___sec37" style="font-size: 80%;">&nbsp;&nbsp;&nbsp;References</a></li>
 
         </ul>
       </li>
@@ -222,7 +225,7 @@ $$
 <br>
 University of Stavanger
 <p>
-<center><h4>Sep 5, 2019</h4></center> <!-- date -->
+<center><h4>Sep 17, 2019</h4></center> <!-- date -->
 <br>
 <p>
 <b>Summary.</b> (Work in Progress) The purpose of this document is to explain how computers solve mathematical models.
