fixed some typos in p2 and extended deadline

--- a/projects/H20/project2/html/._project2-readable000.html
+++ b/projects/H20/project2/html/._project2-readable000.html
@@ -147,14 +147,14 @@ $$
 <center><h1>Transport in Porous Media -  From Laboratory Scale to Field Scale</h1></center>  <!-- document title -->
 
 <p>
-<!-- author(s): MOD510: Mandatory project \#2, and Deadline: 11 October 2020 (23:59) -->
+<!-- author(s): MOD510: Mandatory project \#2, and Deadline: 18 October 2020 (23:59) -->
 
 <center>
 <b>MOD510: Mandatory project \#2</b> 
 </center>
 
 <center>
-<b>Deadline: 11 October 2020 (23:59)</b> 
+<b>Deadline: 18 October 2020 (23:59)</b> 
 </center>
 
 <p>
@@ -162,7 +162,7 @@ $$
 
 <br>
 <p>
-<center><h4>Sep 25, 2020</h4></center> <!-- date -->
+<center><h4>Oct 2, 2020</h4></center> <!-- date -->
 <br>
 <p>
 <b>Learning objectives.</b>
@@ -290,7 +290,7 @@ $$
 where \( A=\pi{r}^2 \) is the cross-sectional area of the core.
 
 <ul>
-<li> Read the data stored in the file <code>core_flood.dat</code>. Make a scatter plot of \( \Delta{P} \) versus \( Q \).</li>
+<li> Read the data stored in the file <code>perm_data.dat</code>. Make a scatter plot of \( \Delta{P} \) versus \( Q \).</li>
 </ul>
 
 <b>Part 2.</b>
@@ -855,8 +855,8 @@ $$
 \begin{equation}
 \underbrace{\begin{pmatrix}
 1+\xi_0&-\xi_0&0&0\\ 
--\xi_1&2+\xi_1&-\xi_1&0\\ 
-0&-\xi_2&2+\xi_2&-\xi_2\\ 
+-\xi_1&1+2\xi_1&-\xi_1&0\\ 
+0&-\xi_2&1+2\xi_2&-\xi_2\\ 
 0&0&-\xi_3&1+\xi_3\\ 
 \end{pmatrix}}_{\mathbf{A}}
 \underbrace{\begin{pmatrix}
