fixed some typos

--- a/html/._book002.html
+++ b/html/._book002.html
@@ -859,7 +859,7 @@ a<span style="color: #666666">=2</span>
 <p>
 In this case <code>print(a)</code> <em>before</em> calling <code>f(x)</code> would give the answer <code>2</code> and <em>after</em> calling <code>f(x)</code> would give <code>10</code>.
 <div class="alert alert-block alert-success alert-text-normal"><b>Use of global variables.</b>
-Sometimes global variables can be very useful, and help you to make the code simpler. But, make sure to use a <em>naming convention</em>  for them, e.g. end all the global variables with an underscore. In the example above we would write <code>global a_</code>. A person reading the code would then know that all variables ending with an underscore are global, and can be altered by many functions.
+Sometimes global variables can be very useful, and help you to make the code simpler. But, make sure to use a <em>naming convention</em>  for them, e.g. end all the global variables with an underscore. In the example above we would write <code>global a_</code>. A person reading the code would then know that all variables ending with an underscore are global, and can potentially be modified by many functions.
 </div>
 
 
