--- a/sphinx/._book002.html
+++ b/sphinx/._book002.html
@@ -376,7 +376,7 @@ However, the challenge with our implementation is that if we want to calculate t
 <p>In this case <code class="docutils literal notranslate"><span class="pre">print(a)</span></code> <em>before</em> calling <code class="docutils literal notranslate"><span class="pre">f(x)</span></code> would give the answer <code class="docutils literal notranslate"><span class="pre">2</span></code> and <em>after</em> calling <code class="docutils literal notranslate"><span class="pre">f(x)</span></code> would give <code class="docutils literal notranslate"><span class="pre">10</span></code>.</p>
 <div class="admonition-use-of-global-variables admonition">
 <p class="admonition-title">Use of global variables</p>
-<p>Sometimes global variables can be very useful, and help you to make the code simpler. But, make sure to use a <em>naming convention</em>  for them, e.g. end all the global variables with an underscore. In the example above we would write <code class="docutils literal notranslate"><span class="pre">global</span> <span class="pre">a_</span></code>. A person reading the code would then know that all variables ending with an underscore are global, and can be altered by many functions.</p>
+<p>Sometimes global variables can be very useful, and help you to make the code simpler. But, make sure to use a <em>naming convention</em>  for them, e.g. end all the global variables with an underscore. In the example above we would write <code class="docutils literal notranslate"><span class="pre">global</span> <span class="pre">a_</span></code>. A person reading the code would then know that all variables ending with an underscore are global, and can potentially be modified by many functions.</p>
 </div>
 </div>
 </div>
