--- a/projects/H22/project4/html/project4-readable.html
+++ b/projects/H22/project4/html/project4-readable.html
@@ -152,6 +152,16 @@ MathJax.Hub.Config({
 </center> <!-- date -->
 <br>
 
+<p>
+<b>Learning objectives.</b>
+By completing this project, the student will:
+</p>
+<ul>
+<li> Model a Corona virus outbreak mechanistically with a random walk on a 2D, lattice grid.</li>
+<li> Use Monte Carlo techniques to quantify model uncertainty.</li>
+<li> Compare output from the stochastic model with deterministic ODE-models.</li>
+<li> Get insight into mechanisms important for spread of infectious diseases</li> 
+</ul>
 
 </div> <!-- end jumbotron -->
 <h1 id="sec:introduction" class="anchor">Introduction</h1>
